--- a/index.html
+++ b/index.html
@@ -492,31 +492,31 @@
                         <p> 4 Benatia</p>
                         <div class="away_card">
                             <div class="card-header">
-                                <p>Bailly</p>
+                                <p>Benatia</p>
                                 <div class="photo">
-                                    <img src="images/mu/bailly.jpg" alt="Bailly">
+                                    <img src="images/juve/benatia.jpg" alt="Benatia">
                                 </div>
                             </div>
                             <div class="info-topwrap">
                                 <div class="info-top">
                                     <div class="age">
                                         Yars
-                                        <p>24yr</p>
+                                        <p>31yr</p>
                                     </div>
                                     <div class="height">
                                         Height
-                                        <p>1,77m</p>
+                                        <p>1,89m</p>
                                     </div>
                                     <div class="origin">
                                         Origin
-                                        <p>Ivory Coast</p>
+                                        <p>	Morocco</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="info-bottom">
                                 <div class="games">
                                     <p>Games</p>
-                                    <p>1</p>
+                                    <p>5</p>
                                 </div>
                                 <div class="goals">
                                     <p>Goals</p>
@@ -530,35 +530,35 @@
                         <p> 3 Chiellini</p>
                         <div class="away_card">
                             <div class="card-header">
-                                <p>Jones</p>
+                                <p>Chiellini</p>
                                 <div class="photo">
-                                    <img src="images/mu/djons.jpg" alt="Jones">
+                                    <img src="images/juve/cheilini.jpg" alt="Chiellini">
                                 </div>
                             </div>
                             <div class="info-topwrap">
                                 <div class="info-top">
                                     <div class="age">
                                         Yars
-                                        <p>26yr</p>
+                                        <p>34yr</p>
                                     </div>
                                     <div class="height">
                                         Height
-                                        <p>1,8m</p>
+                                        <p>1,87m</p>
                                     </div>
                                     <div class="origin">
                                         Origin
-                                        <p>England</p>
+                                        <p>Italy</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="info-bottom">
                                 <div class="games">
                                     <p>Games</p>
-                                    <p>2</p>
+                                    <p>10</p>
                                 </div>
                                 <div class="goals">
                                     <p>Goals</p>
-                                    <p>0</p>
+                                    <p>1</p>
                                 </div>
                             </div>
                         </div>
@@ -568,24 +568,24 @@
                         <p> 12 Alex Sandro</p>
                         <div class="away_card">
                             <div class="card-header">
-                                <p>Shaw</p>
+                                <p>Alex Sandro</p>
                                 <div class="photo">
-                                    <img src="images/mu/shaw.jpg" alt="Shaw">
+                                    <img src="images/juve/alex-sandro.jpg" alt="Alex Sandro">
                                 </div>
                             </div>
                             <div class="info-topwrap">
                                 <div class="info-top">
                                     <div class="age">
                                         Yars
-                                        <p>23yr</p>
+                                        <p>27yr</p>
                                     </div>
                                     <div class="height">
                                         Height
-                                        <p>1,85m</p>
+                                        <p>1,8m</p>
                                     </div>
                                     <div class="origin">
                                         Origin
-                                        <p>England</p>
+                                        <p>Brazil</p>
                                     </div>
                                 </div>
                             </div>
@@ -606,31 +606,31 @@
                         <p>22 Cancelo</p>
                         <div class="away_card">
                             <div class="card-header">
-                                <p>Valencia</p>
+                                <p>Cancelo</p>
                                 <div class="photo">
-                                    <img src="images/mu/valencia.jpg" alt="Valencia">
+                                    <img src="images/juve/cancelo.jpg" alt="Cancelo">
                                 </div>
                             </div>
                             <div class="info-topwrap">
                                 <div class="info-top">
                                     <div class="age">
                                         Yars
-                                        <p>33yr</p>
+                                        <p>24yr</p>
                                     </div>
                                     <div class="height">
                                         Height
-                                        <p>1,8m</p>
+                                        <p>1,82m</p>
                                     </div>
                                     <div class="origin">
                                         Origin
-                                        <p>Ecuador</p>
+                                        <p>Portugal</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="info-bottom">
                                 <div class="games">
                                     <p>Games</p>
-                                    <p>2</p>
+                                    <p>12</p>
                                 </div>
                                 <div class="goals">
                                     <p>Goals</p>
@@ -644,35 +644,35 @@
                         <p> 6 Khedira</p>
                         <div class="away_card">
                             <div class="card-header">
-                                <p>Pogba</p>
+                                <p>Khedira</p>
                                 <div class="photo">
-                                    <img src="images/mu/pogba.jpg" alt="Pogba">
+                                    <img src="images/juve/khedira.jpg" alt="Khedira">
                                 </div>
                             </div>
                             <div class="info-topwrap">
                                 <div class="info-top">
                                     <div class="age">
                                         Yars
-                                        <p>25yr</p>
+                                        <p>31yr</p>
                                     </div>
                                     <div class="height">
                                         Height
-                                        <p>1,91m</p>
+                                        <p>1,89m</p>
                                     </div>
                                     <div class="origin">
                                         Origin
-                                        <p>France</p>
+                                        <p>Germany</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="info-bottom">
                                 <div class="games">
                                     <p>Games</p>
-                                    <p>13</p>
+                                    <p>5</p>
                                 </div>
                                 <div class="goals">
                                     <p>Goals</p>
-                                    <p>3</p>
+                                    <p>1</p>
                                 </div>
                             </div>
                         </div>
@@ -682,31 +682,31 @@
                         <p>5 Pjanic</p>
                         <div class="away_card">
                             <div class="card-header">
-                                <p>Fred</p>
+                                <p>Pjanic</p>
                                 <div class="photo">
-                                    <img src="images/mu/fred.jpg" alt="fred">
+                                    <img src="images/juve/pjanic.jpg" alt="Pjanic">
                                 </div>
                             </div>
                             <div class="info-topwrap">
                                 <div class="info-top">
                                     <div class="age">
                                         Yars
-                                        <p>25yr</p>
+                                        <p>28yr</p>
                                     </div>
                                     <div class="height">
                                         Height
-                                        <p>1,69m</p>
+                                        <p>1,78m</p>
                                     </div>
                                     <div class="origin">
                                         Origin
-                                        <p>Brazil</p>
+                                        <p>	Bosnia and Herzegovina</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="info-bottom">
                                 <div class="games">
                                     <p>Games</p>
-                                    <p>7</p>
+                                    <p>13</p>
                                 </div>
                                 <div class="goals">
                                     <p>Goals</p>
@@ -717,39 +717,38 @@
                     </div>
                     <div class="formation juve_player-8">
                         <img src="images/juve/juve_form.png" alt="">
-
                         <p> 23 Emre Can</p>
                         <div class="away_card">
                             <div class="card-header">
-                                <p>Matic</p>
+                                <p>Emre Can</p>
                                 <div class="photo">
-                                    <img src="images/mu/matic.jpg" alt="Matic">
+                                    <img src="images/juve/emre.jpg" alt="Emre Can">
                                 </div>
                             </div>
                             <div class="info-topwrap">
                                 <div class="info-top">
                                     <div class="age">
                                         Yars
-                                        <p>30yr</p>
+                                        <p>24yr</p>
                                     </div>
                                     <div class="height">
                                         Height
-                                        <p>1,94m</p>
+                                        <p>1,84m</p>
                                     </div>
                                     <div class="origin">
                                         Origin
-                                        <p>Serbia</p>
+                                        <p>Germany</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="info-bottom">
                                 <div class="games">
                                     <p>Games</p>
-                                    <p>36</p>
+                                    <p>9</p>
                                 </div>
                                 <div class="goals">
                                     <p>Goals</p>
-                                    <p>1</p>
+                                    <p>0</p>
                                 </div>
                             </div>
                         </div>
@@ -759,16 +758,16 @@
                         <p> 17 Mandzukic</p>
                         <div class="away_card">
                             <div class="card-header">
-                                <p>Lukaku</p>
+                                <p>Mandzukic</p>
                                 <div class="photo">
-                                    <img src="images/mu/lukaku.jpg" alt="Lukaku">
+                                    <img src="images/juve/mario.jpg" alt="Mandzukic">
                                 </div>
                             </div>
                             <div class="info-topwrap">
                                 <div class="info-top">
                                     <div class="age">
                                         Yars
-                                        <p>25yr</p>
+                                        <p>32yr</p>
                                     </div>
                                     <div class="height">
                                         Height
@@ -776,18 +775,18 @@
                                     </div>
                                     <div class="origin">
                                         Origin
-                                        <p>Belgium</p>
+                                        <p>	Croatia</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="info-bottom">
                                 <div class="games">
                                     <p>Games</p>
-                                    <p>13</p>
+                                    <p>12</p>
                                 </div>
                                 <div class="goals">
                                     <p>Goals</p>
-                                    <p>5</p>
+                                    <p>7</p>
                                 </div>
                             </div>
                         </div>
@@ -797,35 +796,35 @@
                         <p> 7 Ronaldo</p>
                         <div class="away_card">
                             <div class="card-header">
-                                <p>Sanchez</p>
+                                <p>Ronaldo</p>
                                 <div class="photo">
-                                    <img src="images/mu/Sanchez.jpg" alt="Sanchez">
+                                    <img src="images/juve/ronaldo.jpg" alt="Ronaldo">
                                 </div>
                             </div>
                             <div class="info-topwrap">
                                 <div class="info-top">
                                     <div class="age">
                                         Yars
-                                        <p>29yr</p>
+                                        <p>33yr</p>
                                     </div>
                                     <div class="height">
                                         Height
-                                        <p>1,69m</p>
+                                        <p>1,87m</p>
                                     </div>
                                     <div class="origin">
                                         Origin
-                                        <p>	Chile</p>
+                                        <p>	Portugal</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="info-bottom">
                                 <div class="games">
                                     <p>Games</p>
-                                    <p>10</p>
+                                    <p>15</p>
                                 </div>
                                 <div class="goals">
                                     <p>Goals</p>
-                                    <p>1</p>
+                                    <p>10</p>
                                 </div>
                             </div>
                         </div>
@@ -835,24 +834,24 @@
                         <p> 11 Douglas Costa</p>
                         <div class="away_card">
                             <div class="card-header">
-                                <p>Rashford</p>
+                                <p>Douglas Costa</p>
                                 <div class="photo">
-                                    <img src="images/mu/rashford.jpg" alt="Rashford">
+                                    <img src="images/juve/costa.jpg" alt="Douglas Costa">
                                 </div>
                             </div>
                             <div class="info-topwrap">
                                 <div class="info-top">
                                     <div class="age">
                                         Yars
-                                        <p>21yr</p>
+                                        <p>28yr</p>
                                     </div>
                                     <div class="height">
                                         Height
-                                        <p>1,8m</p>
+                                        <p>1,72m</p>
                                     </div>
                                     <div class="origin">
                                         Origin
-                                        <p>England</p>
+                                        <p>Brazil</p>
                                     </div>
                                 </div>
                             </div>
@@ -863,7 +862,7 @@
                                 </div>
                                 <div class="goals">
                                     <p>Goals</p>
-                                    <p>2</p>
+                                    <p>0</p>
                                 </div>
                             </div>
                         </div>
